--- a/Simulation/GPS Beacon Webpage Example/Beacon Webpage with GPS Example 10.10.10.1.html
+++ b/Simulation/GPS Beacon Webpage Example/Beacon Webpage with GPS Example 10.10.10.1.html
@@ -1,7 +1,8 @@
-<br>Date: 8/7/2023
-<br>Location: 49.6532N, -109.5220W
-<br>Speed (knots): 1.78
-<br>Angle: 342.54
-<br>Altitude: 1304.10
+<br>Time: 18:58:33.000
+<br>Date: 18/7/2023
+<br>Location: 49.988975525N, -109.121818542W
+<br>Speed (knots): 0.00
+<br>Angle: 0.00
+<br>Altitude: 775.00
 <br>Satellites: 6
-<br>Click <a href="http://10.10.10.1/H">here</a> to turn ON the LED Beacon.<br>Click <a href="http://10.10.10.1/L">here</a> to turn OFF the LED Beacon.<br>
+<br>Click <a href="/H">here</a> to turn ON the LED Beacon.<br>Click <a href="/L">here</a> to turn OFF the LED Beacon.<br>
